Added styles to ExpenseDate and cleaned sass compiled files(cuz I use node-sass so no need for compiling via Watch Sass)
Cateva stilizari pt cele doua componente adaugate si am sters fisierele rezultate din compilarea .sass cu Watch Sass -> stii de ce

--- a/src/components/ExpenseItem/ExpenseItem.module.scss
+++ b/src/components/ExpenseItem/ExpenseItem.module.scss
@@ -11,6 +11,7 @@ $font_color_description: white;
   box-shadow: 2px 2px 13px 0px rgba(0, 0, 0, 0.64);
   padding: 0.5rem;
   margin: 1rem auto;
+  background-color: #282c34;
 
   &__description {
     margin: 0.5rem 1.2rem;
