--- a/src/components/ExpenseDate/ExpenseDate.module.scss
+++ b/src/components/ExpenseDate/ExpenseDate.module.scss
@@ -1,2 +1,24 @@
 .calendar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid white;
+  border-radius: 0.7em;
+  background-color: rgb(49, 49, 49);
+  width: 5.3rem;
+  height: 5.3rem;
+  padding: 0.6em 1.2em;
+
+  &__year {
+    font-size: 0.8rem;
+  }
+  &__month {
+    font-size: 0.8rem;
+    font-weight: 800;
+  }
+  &__date {
+    font-size: 1.5rem;
+    font-weight: 800;
+  }
 }
