--- a/src/index.scss
+++ b/src/index.scss
@@ -19,7 +19,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #282c34;
+  // background-color: #282c34;
+  background-color: rgb(49, 49, 49);
 }
 
 code {
