--- a/src/components/ExpenseDate.module.scss
+++ b/src/components/ExpenseDate.module.scss
@@ -5,7 +5,8 @@
   justify-content: center;
   border: 1px solid white;
   border-radius: 0.7em;
-  background-color: rgb(49, 49, 49);
+  background-color: #282c34;
+
   width: 5.3rem;
   height: 5.3rem;
   padding: 0.6em 1.2em;
