Added new components that handles Expense Inputs
Am creat cateva componente ce au rolul de a prelua datele de la utilizator + ceva stilizari

--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -13,3 +13,12 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+/* Am mutat aici toate clasele generale */
+
+/* clasa ce va fi atribuita tuturor containeelor */
+.container {
+  width: Max(319px, 90%);
+  padding: 0.8rem;
+  margin: 2rem auto;
+}
