Added new component ExpenseFilter for filtering + extra functionality in Expenses component + styling
Am creat o noua componenta prezentationala pt partea de filtrare -> preia valoarea si o trimite componentei parinte Expenses, unde se gestioneaza starea ce preia anul. Au fost modificate cateva chestiuni legate de stilizare

--- a/src/components/ExpenseInput/ExpenseForm.scss
+++ b/src/components/ExpenseInput/ExpenseForm.scss
@@ -24,6 +24,11 @@ $button_bkg_hover: #be252a;
       padding: 0.3rem;
       border: 1px solid #ccc;
       border-radius: 0.3em;
+      outline: none;
+
+      &:focus {
+        box-shadow: 0 0 3pt 2pt rgba(206, 50, 63, 0.904);
+      }
     }
   }
 
