Reworked the logic for filtering(added total option in filter -> diagram also displays for total) and passing expenses list. Everything is functional now
Am regandit si implementat logica filtrarii in componenta Expenses -> lista trimisa este fie completa, fie filtrata, in functie de starea variabilei de filtrare + extra stilizari

--- a/src/components/Chart/Chart.scss
+++ b/src/components/Chart/Chart.scss
@@ -2,10 +2,11 @@
   display: flex;
   justify-content: space-around;
   // calculez latimea pt ca am padding-ul dat de container + tin cont de marginea negativa a filtrului
-  width: calc(100% + 0.8rem * 2);
-  margin: -0.8rem;
-  margin-bottom: 0.8rem;
-  padding: 1rem;
+  //   width: calc(100% + 0.8rem * 2);
+  //   margin: -0.8rem;
+  //   margin-bottom: 0.8rem;
+  padding: 0.8rem;
   height: MIN(30vh, 12rem);
+  border-radius: 1rem;
   background-color: #505152;
 }
