--- a/src/components/Expenses/ExpenseItem.module.scss
+++ b/src/components/Expenses/ExpenseItem.module.scss
@@ -10,6 +10,7 @@ $font_color_description: white;
   padding: 0.5rem;
   margin: 0.8rem 0;
   background-color: rgb(49, 49, 49);
+  position: relative;
 
   &__description {
     margin: 0.5rem 1.2rem;
@@ -37,6 +38,27 @@ $font_color_description: white;
     border: 1px solid white;
     border-radius: 0.4rem;
   }
+
+  &__delete {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0.5rem;
+    line-height: 0.7;
+    border: none;
+    border-radius: 0.5rem;
+    border-top-right-radius: 1rem;
+    cursor: pointer;
+    background-color: #564f4f;
+    color: #b0abab;
+    opacity: 0.5;
+    transition: all 0.1s ease-out;
+
+    &:hover {
+      opacity: 1;
+      background-color: #858282;
+    }
+  }
 }
 
 @media screen and (min-width: 580px) {
@@ -55,6 +77,7 @@ $font_color_description: white;
     &__price {
       font-size: 1.3rem;
       padding: 0.7rem 1.6rem;
+      margin-right: 1rem;
     }
   }
 }
